[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/godungeon/inspector_plugin/DungeonTilesImageImporter.gd" type="Script" id=1]


[node name="DungeonTilesImageImporter" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 320.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 300 )
window_title = "Open a File"
resizable = true
mode = 0
filters = PoolStringArray( "*.png ; PNG Images" )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 320.0
margin_bottom = 246.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 320.0
margin_bottom = 14.0
text = "Image Import Tools"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 320.0
margin_bottom = 94.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_right = 320.0
margin_bottom = 24.0

[node name="Label" type="LineEdit" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 221.0
margin_bottom = 24.0
size_flags_horizontal = 3
editable = false

[node name="Button" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 225.0
margin_right = 320.0
margin_bottom = 24.0
text = "Select Image"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 320.0
margin_bottom = 52.0

[node name="Button" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 104.0
margin_bottom = 24.0
size_flags_horizontal = 3
disabled = true
text = "Import At"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 108.0
margin_right = 212.0
margin_bottom = 24.0
size_flags_horizontal = 3
rounded = true
allow_greater = true
allow_lesser = true
prefix = "x"

[node name="SpinBox2" type="SpinBox" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 216.0
margin_right = 320.0
margin_bottom = 24.0
size_flags_horizontal = 3
rounded = true
allow_greater = true
allow_lesser = true
prefix = "y"

[node name="Button" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 320.0
margin_bottom = 76.0
disabled = true
text = "Replace Tiles"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 98.0
margin_right = 320.0
margin_bottom = 102.0

[node name="Button2" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 106.0
margin_right = 320.0
margin_bottom = 129.0
size_flags_vertical = 3
text = "Export Image"

[node name="Button3" type="Button" parent="VBoxContainer"]
margin_top = 106.0
margin_right = 320.0
margin_bottom = 126.0
size_flags_vertical = 3
text = "Flip X"

[node name="Button4" type="Button" parent="VBoxContainer"]
margin_top = 130.0
margin_right = 320.0
margin_bottom = 150.0
size_flags_vertical = 3
text = "Flip Y"

[node name="RotateRight" type="Button" parent="VBoxContainer"]
margin_top = 154.0
margin_right = 320.0
margin_bottom = 174.0
size_flags_vertical = 3
text = "Rotate Right"

[node name="RotateLeft" type="Button" parent="VBoxContainer"]
margin_top = 178.0
margin_right = 320.0
margin_bottom = 198.0
size_flags_vertical = 3
text = "Rotate Left"

[node name="Center" type="Button" parent="VBoxContainer"]
margin_top = 202.0
margin_right = 320.0
margin_bottom = 222.0
size_flags_vertical = 3
text = "Center"

[node name="ClearTiles" type="Button" parent="VBoxContainer"]
margin_top = 226.0
margin_right = 320.0
margin_bottom = 246.0
size_flags_vertical = 3
text = "Clear Tiles"
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer/Button" to="FileDialog" method="popup_centered"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer2/Button" to="." method="import_image" binds= [ true ]]
[connection signal="value_changed" from="VBoxContainer/VBoxContainer/HBoxContainer2/SpinBox" to="." method="_on_import_offset_x_value_changed"]
[connection signal="value_changed" from="VBoxContainer/VBoxContainer/HBoxContainer2/SpinBox2" to="." method="_on_import_offset_y_value_changed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Button" to="." method="import_image"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_export_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="VBoxContainer/Button4" to="." method="_on_flip_y_pressed"]
[connection signal="pressed" from="VBoxContainer/RotateRight" to="." method="_on_rotate_pressed"]
[connection signal="pressed" from="VBoxContainer/RotateLeft" to="." method="_on_rotate_left_pressed"]
[connection signal="pressed" from="VBoxContainer/Center" to="." method="_on_center_pressed"]
[connection signal="pressed" from="VBoxContainer/ClearTiles" to="." method="_on_clear_tiles_pressed"]
